implements ssh keys HTTP endpoint
the new HTTP endpoint uses RBAC compliant provider
